--- a/nodes/blynk-iot-client.html
+++ b/nodes/blynk-iot-client.html
@@ -172,7 +172,7 @@
 
     <p class="form-tips">
         Official documentation: 
-        <a href="http://docs.blynk.cc/#getting-started-getting-started-with-the-blynk-app-4-auth-token">Auth Token</a>
+        <a href=https://docs.blynk.io/en/getting-started/activating-devices/blynk-edent-static-authtoken#getting-template-id-and-auth-token-for-device">Getting Template ID and Auth Token for device</a>
     <p>
 </script>
 
