--- a/nodes/blynk-iot-out-set-property.html
+++ b/nodes/blynk-iot-out-set-property.html
@@ -101,8 +101,6 @@
             <optgroup label="All Widgets">
                 <option value="color" >Color</option>
                 <option value="label" >Label</option>
-                <option value="min" >Min</option>
-                <option value="max" >Max</option>
             </optgroup>
             <optgroup label="Button">
                 <option value="onLabel" >On label</option>
@@ -154,8 +152,6 @@
     <p>To set multiple properties use this syntax: <br>
     <code>msg.label</code> to set the Label property<br>
     <code>msg.color</code> to set the color property<br>
-    <code>msg.min</code> to set the Min property<br>
-    <code>msg.max</code> to set the Max property<br>
     <code>msg.onlabel</code> to set the onLabel property (only Button and Styled Button widget)<br>
     <code>msg.offlabel</code> to set the offLabel property (only Button and Styled Button widget)<br>
     <code>msg.onColor</code> to set the onColor property (only Styled Button widget)<br>
@@ -177,7 +173,7 @@
     
     <br>
     <h2>ALL WIDGETS</h2>
-    <p>Four widget properties are supported - <code>color</code>, <code>label</code>, <code>min</code>, <code>max</code> for all widgets : </p>
+    <p>Two widget properties are supported - <code>color</code>, <code>label</code> for all widgets : </p>
     <p><code>label</code> is string for label of all widgets.</p><p><code>color</code> is string in <a href="http://www.w3schools.com/html/html_colors.asp">HEX</a> format (in the form: #RRGGBB, 
     where RR (red), GG (green) and BB (blue) are hexadecimal values between 00 and FF). For example :</p>
     <pre><code>
@@ -212,6 +208,6 @@
     <br>
     <p class="form-tips">
             Official documentation: 
-            <a href="http://docs.blynk.cc/#blynk-main-operations-change-widget-properties">Change widget properties</a>
+            <a href="https://docs.blynk.io/en/blynk.edgent/mainoperations/widget-properties">Widget properties</a>
     <p>
 </script>
