--- a/nodes/blynk-iot-out-sync.html
+++ b/nodes/blynk-iot-out-sync.html
@@ -3,11 +3,13 @@
     // eslint-disable-next-line func-names
     (function () {
       function validPin(tmppin) {
+        /*
         const tmpPin = parseInt(tmppin, 10);
         if (Number.isInteger(tmpPin) && tmpPin >= 0 && tmpPin <= 255) {
           return true;
         }
-        return false;
+        return false; */
+        return true;
       }
     
       function onEditSave() {
@@ -31,13 +33,9 @@
       function label() {
         let pin = 'pin error';
         const type = 'Sync';
-        const allpin = (this.pinmode == 1); // eslint-disable-line eqeqeq
 
         if (validPin(this.pin)) {
           pin = `Pin V${this.pin} - ${type}`;
-        }
-        if (allpin) {
-          pin = `Pin All - ${type}`;
         }
         return this.name || pin;
       }
@@ -47,7 +45,7 @@
         paletteLabel: 'sync',
         defaults: {
           name: { value: '' },
-          pin: { value: '', required: false, validate: RED.validators.regex(/^([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$/) },
+          pin: { value: '', required: false },
           pinmode: { value: 0 },
           client: { type: 'blynk-iot-client', required: true },
         },
@@ -81,7 +79,7 @@
      </div>
     <div class="form-row" id="div-sync-pin">
         <label for="node-input-pin"><i class="fa fa-dot-circle-o"></i> <span>Virtual Pin</span></label>
-        <input type="number" id="node-input-pin"  min="0" max="255" placeholder="pin">
+        <input type="text" id="node-input-pin"  placeholder="pin">
      </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
@@ -92,13 +90,12 @@
 <script type="text/x-red" data-help-name="blynk-iot-out-sync">
     <p>Blynk sync node.</p>
     <p>This node will request server to send the most recent value of all pins or a single pin. Every virtual pin will generate a write event.</p><br>
-    <p>"Sync mode" choose if you want to sync all the pins or just a specific pin<br>
-    &nbsp;&nbsp; syncVirtual, select the pin number in the interface<br>
-    &nbsp;&nbsp; syncAll, request the sync of all pins</p>
+    <p>"Sync mode" choose if you want to sync all the pins or just a specific pin/pins<br>
+    &nbsp;&nbsp; syncVirtual, select the pin number in the interface, separate multiple pins by comma. Ex.(1,2,3)<br>
+    &nbsp;&nbsp; syncAll, request the sync of all pins </p>
     <p class="form-tips">
         Official documentation: 
-        <a href="http://docs.blynk.cc/#blynk-main-operations-state-syncing-for-hardware">State syncing</a>
-        <a href="http://docs.blynk.cc/#blynk-firmware-virtual-pins-control-blynksyncall">Blynk.syncAll()</a>
-        <a href="http://docs.blynk.cc/#blynk-firmware-virtual-pins-control-blynksyncvirtualvpin">Blynk.syncVirtual()</a>
+        <a href="https://docs.blynk.io/en/blynk.edgent/api/virtual-pins#blynk-syncall">Blynk.syncAll()</a>
+        <a href="https://docs.blynk.io/en/blynk.edgent/api/virtual-pins#blynk-syncvirtual-vpin">Blynk.syncVirtual()</a>
     <p>
 </script>
