--- a/nodes/blynk-iot-image-gallery.html
+++ b/nodes/blynk-iot-image-gallery.html
@@ -38,7 +38,7 @@
     
   RED.nodes.registerType('blynk-iot-image-gallery', {
         category: 'Blynk IoT',
-        paletteLabel: 'image-gallery',
+        paletteLabel: 'image gallery',
         defaults: {
           name: { value: '' },
           pin: { value: '', required: true, validate: RED.validators.regex(/^([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$/) },
@@ -101,7 +101,8 @@
     <!--
     <p class="form-tips">
             Official documentation: 
-            <a href="http://docs.blynk.cc/#blynk-main-operations-change-widget-properties">Change widget properties</a>
+            <a href="https://docs.blynk.io/en/blynk.console/widgets-console/image-gallery">Widget - Image Gallery</a>
+            <a href="https://docs.blynk.io/en/blynk.edgent-firmware-api/widget-properties">Widget Properties</a>
     <p>
     -->
    
