--- a/nodes/blynk-iot-in-write.html
+++ b/nodes/blynk-iot-in-write.html
@@ -110,8 +110,7 @@
     
     <h3>References</h3>
     <ul>
-        <li>Official documentation -  <a href="http://docs.blynk.cc/#blynk-main-operations-send-data-from-app-to-hardware">Write</a></li>
-        <li><a href="https://github.com/gablau/node-red-contrib-blynk-iot">GitHub</a> - the nodes github repository</li>
-        <li><a href="https://www.npmjs.com/package/node-red-contrib-blynk-iot">NPM</a> - the nodes on package manager</li>
+        <li>Official documentation -  <a href="https://docs.blynk.io/en/blynk.console/templates/datastreams/virtual-pin">Virtual Pin</a></li>
     </ul>
+
 </script>
