--- a/nodes/blynk-iot-client.html
+++ b/nodes/blynk-iot-client.html
@@ -70,7 +70,7 @@
           key: { value: '', required: true, validate: RED.validators.regex(/^[a-zA-Z0-9-_=]{32}$/) }, // fix issue #13 https://github.com/gablau/node-red-contrib-blynk-iot/issues/13
           tmpl: { value: '' },
           dbg_all: { value: false },
-          dbg_read: { value: false },
+          dbg_log: { value: false },
           dbg_prop: { value: false },
           dbg_sync: { value: false },
           dbg_low: { value: false },
@@ -136,7 +136,7 @@
                     <li>
                         <input type="checkbox" id="node-config-input-dbg_all" value="all" style="width: auto; vertical-align: top;"> All</input>
                     </li><li>
-                        <input type="checkbox" id="node-config-input-dbg_read" value="all" style="width: auto; vertical-align: top;"> Read</input>
+                        <input type="checkbox" id="node-config-input-dbg_log" value="all" style="width: auto; vertical-align: top;"> Log Event</input>
                     </li><li>
                         <input type="checkbox" id="node-config-input-dbg_write" value="all" style="width: auto; vertical-align: top;"> Write</input>
                     </li><li>
@@ -172,7 +172,7 @@
 
     <p class="form-tips">
         Official documentation: 
-        <a href=https://docs.blynk.io/en/getting-started/activating-devices/blynk-edent-static-authtoken#getting-template-id-and-auth-token-for-device">Getting Template ID and Auth Token for device</a>
+        <a href="https://docs.blynk.io/en/getting-started/activating-devices/manual-device-activation">Manual Device Activation</a>
     <p>
 </script>
 
