--- a/nodes/blynk-iot-out-lcd.html
+++ b/nodes/blynk-iot-out-lcd.html
@@ -79,6 +79,6 @@
    </p>
    <p class="form-tips">
         Official documentation: 
-        <a href="http://docs.blynk.cc/#widgets-displays-lcd">LCD</a>
+        <a href="https://docs.blynk.io/en/blynk.apps/widgets-app#lcd">LCD</a>
    <p>
 </script>
