--- a/nodes/blynk-iot-out-sync.html
+++ b/nodes/blynk-iot-out-sync.html
@@ -33,8 +33,12 @@
       function label() {
         let pin = 'pin error';
         const type = 'Sync';
+        const allpin = (this.pinmode == 1); // eslint-disable-line eqeqeq
 
-        if (validPin(this.pin)) {
+        if (allpin) {
+          pin = `Pin All - ${type}`;
+        }
+        else {
           pin = `Pin V${this.pin} - ${type}`;
         }
         return this.name || pin;
@@ -94,8 +98,9 @@
     &nbsp;&nbsp; syncVirtual, select the pin number in the interface, separate multiple pins by comma. Ex.(1,2,3)<br>
     &nbsp;&nbsp; syncAll, request the sync of all pins </p>
     <p class="form-tips">
-        Official documentation: 
-        <a href="https://docs.blynk.io/en/blynk.edgent/api/virtual-pins#blynk-syncall">Blynk.syncAll()</a>
-        <a href="https://docs.blynk.io/en/blynk.edgent/api/virtual-pins#blynk-syncvirtual-vpin">Blynk.syncVirtual()</a>
+        Official documentation:
+        <a href="https://docs.blynk.io/en/blynk.edgent-firmware-api/state-syncing">State Syncing()</a> 
+        <a href="https://docs.blynk.io/en/blynk.edgent-firmware-api/virtual-pins#blynk.syncall">Blynk.syncAll()</a>
+        <a href="https://docs.blynk.io/en/blynk.edgent-firmware-api/virtual-pins#blynk.syncvirtual-vpin">Blynk.syncVirtual()</a>
     <p>
 </script>
