--- a/nodes/blynk-iot-out-write.html
+++ b/nodes/blynk-iot-out-write.html
@@ -98,6 +98,6 @@
     &nbsp;&nbsp; Dynamic, the pin number is passed through <code> msg.pin</code> property</p>
     <p class="form-tips">
         Official documentation: 
-        <a href="http://docs.blynk.cc/#blynk-main-operations-get-data-from-hardware-pushing-data-from-hardware">Push data</a>
+        <a href="https://docs.blynk.io/en/blynk.edgent-firmware-api/virtual-pins#blynk.virtualwrite-vpin-value">Virtual Pins - Write data</a>
     <p>
 </script>
