--- a/nodes/blynk-iot-style-btn.html
+++ b/nodes/blynk-iot-style-btn.html
@@ -35,7 +35,7 @@
     
   RED.nodes.registerType('blynk-iot-style-btn', {
         category: 'Blynk IoT',
-        paletteLabel: 'style-btn',
+        paletteLabel: 'style button',
         defaults: {
           name: { value: '' },
           pin: { value: '', required: true, validate: RED.validators.regex(/^([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$/) },
@@ -157,7 +157,7 @@
     <!-- 
     <p class="form-tips">
             Official documentation: 
-            <a href="http://docs.blynk.cc/#blynk-main-operations-change-widget-properties">Change widget properties</a>
+            <a href="https://docs.blynk.io/en/blynk.apps/widgets-app#styled-button">Styled Button</a>
     <p>
         -->
 </script>
